[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sdo_clv_pipeline"]

[project]
name = "sdo_clv_pipeline"
authors = [
    {name = "Michael Palumbo", email = "palumbo.astro@gmail.com"}
]

description = "SDO data reduction for center-to-limb variability"
version = "0.5.2"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "numpy~=2.2",
    "pandas",
    "matplotlib",
    "sunpy[all]",
    "astropy",
    "scipy",
    "scikit-image",
    "ipykernel>=6.29.5",
    "numba>=0.61.2",
    "tqdm>=4.67.1",
    "ipdb>=0.13.13",
    "certifi>=2025.8.3",
    "pip-system-certs>=5.2",
    "pyqt5>=5.15.11",
    "pyqt6>=6.9.1",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.4",
    "myst-parser>=4.0",
    "sphinx-book-theme>=1.1",
    "sphinx-copybutton",
    "sphinx-design",
]
test = [
    "pytest",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "uv>=0.7.10",
]
